--- a/pages/git.html
+++ b/pages/git.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-    <title>Git – Sobre Git</title>
+    <title>Git – Sobre Git.</title>
 </head>
+
 <body>
     <div class="focus"></div>
     <header>
@@ -20,26 +22,54 @@
     </header>
     <nav class="vertical-nav">
         <ul class="lista">
-            <a href="../index.html"><li>Controle de Versão</li></a>
-            <a href="git.html"><li>Git</li></a>
-            <a href="github.html"><li>GitHub</li></a>
+            <a href="../index.html">
+                <li>Controle de Versão</li>
+            </a>
+            <a href="git.html">
+                <li>Git</li>
+            </a>
+            <a href="github.html">
+                <li>GitHub</li>
+            </a>
             <ul class="categoria">
-                <a href="contaGitHub.html"><li>Criar Conta no GitHub</li></a>
+                <a href="contaGitHub.html">
+                    <li>Criar Conta no GitHub</li>
+                </a>
             </ul>
-            <a href="gitlab.html"><li>GitLab</li></a>
-            <a href="instalacao.html"><li>Instalação</li></a>
+            <a href="gitlab.html">
+                <li>GitLab</li>
+            </a>
+            <a href="instalacao.html">
+                <li>Instalação</li>
+            </a>
             <ul class="categoria">
-                <a href="instalacaoLinux.html"><li>Instalação no Linux</li></a>
-                <a href="instalacaoWindows.html"><li>Instalação no Windows</li></a>
+                <a href="instalacaoLinux.html">
+                    <li>Instalação no Linux</li>
+                </a>
+                <a href="instalacaoWindows.html">
+                    <li>Instalação no Windows</li>
+                </a>
             </ul>
-            <a href="configuracao.html"><li>Configuração</li></a>
-            <a href="comandos.html"><li>Comandos</li></a>
+            <a href="configuracao.html">
+                <li>Configuração</li>
+            </a>
+            <a href="comandos.html">
+                <li>Comandos</li>
+            </a>
             <ul class="categoria">
-                <a href="gitpull.html"><li>Git Pull</li></a>
-                <a href="branches.html"><li>Branches</li></a>
+                <a href="gitpull.html">
+                    <li>Git Pull</li>
+                </a>
+                <a href="branches.html">
+                    <li>Branches</li>
+                </a>
             </ul>
-            <a href="errosdecommit.html"><li>Erros no Commit</li></a>
-            <a href="exemplo.html"><li class="final">Exemplo de Utilização com Git</li></a>
+            <a href="errosdecommit.html">
+                <li>Erros no Commit</li>
+            </a>
+            <a href="exemplo.html">
+                <li class="final">Exemplo de Utilização com Git</li>
+            </a>
         </ul>
     </nav>
     <main>
@@ -47,51 +77,65 @@
             <h1>Git</h1>
             <img class="logotipos-explicacao" src="../images/Git/GitLogo.png" alt="Logotipo do Git">
             <p>
-                Desenvolvido em 2005 por Linus Torvalds, o famoso criador do kernel do sistema operacional Linux, 
-                Git é um Sistema de Controle de Versão distribuída open-source utilizado pela grande 
-                maioria dos desenvolvedores atualmente. Possui todas as características de um sistema de controle de versão, 
-                como exibir todo o histórico de alterações no código do projeto e retornar um ponto de qualquer registro,
-                para saber como o código estava naquela data específica. Além disso, o Git ajuda muito 
-                controle de fluxo entre desenvolvedores no mesmo projeto com ferramentas para análise e resolução de conflitos quando o 
-                mesmo arquivo é editado por mais de uma pessoa em funcionalidades diferentes, tornando-se um padrão na produção de projetos
+                Desenvolvido em 2005 por Linus Torvalds, o famoso criador do kernel do sistema operacional Linux,
+                Git é um Sistema de Controle de Versão distribuída open-source utilizado pela grande
+                maioria dos desenvolvedores atualmente. Possui todas as características de um sistema de controle de
+                versão,
+                como exibir todo o histórico de alterações no código do projeto e retornar um ponto de qualquer
+                registro,
+                para saber como o código estava naquela data específica. Além disso, o Git ajuda muito
+                controle de fluxo entre desenvolvedores no mesmo projeto com ferramentas para análise e resolução de
+                conflitos quando o
+                mesmo arquivo é editado por mais de uma pessoa em funcionalidades diferentes, tornando-se um padrão na
+                produção de projetos
                 atualmente.
             </p>
             <h2>Formato de Tratamento de Dados com Git</h2>
             <p>
                 O Git trata seus dados mais como um fluxo do estado dos arquivos.
-                Toda vez que é feito um commit, ou salvar o estado de seu projeto no Git, ele basicamente 
-                tira cria uma imagem de todos os arquivos e armazena uma referência para esse conjunto de arquivos. 
-                Caso os arquivos não foram alterados, o Git não armazena o arquivo novamente, 
+                Toda vez que é feito um commit, ou salvar o estado de seu projeto no Git, ele basicamente
+                tira cria uma imagem de todos os arquivos e armazena uma referência para esse conjunto de arquivos.
+                Caso os arquivos não foram alterados, o Git não armazena o arquivo novamente,
                 apenas um link para o arquivo idêntico anterior já armazenado.
             </p>
             <h2>Operação Local</h2>
             <p>
-                Geralmente o Git trabalha com operações locais na área de trabalho do desenvolvedor, e caso esteja desconectado internet ou sem VPN,
+                Geralmente o Git trabalha com operações locais na área de trabalho do desenvolvedor, e caso esteja
+                desconectado internet ou sem VPN,
                 pode-se efetuar a busca do histórico das versões do projeto no banco de dados local.
             </p>
             <h2>Fluxo de Operação do Git</h2>
             <p>O fluxo de trabalho é da seguinte forma:</p>
             <ol>
-                <li><p>Você modifica os arquivos no seu diretório de trabalho;</p></li>
-                <li><p>Você prepara os arquivos, adicionando imagens deles à sua área de preparo;</p></li>
-                <li><p>Você executa o comando <b>commit</b>, o que leva os arquivos como eles estão na área de preparo 
-                    e armazena essa imagens de forma permanente para o diretório do Git.</p></li>
+                <li>
+                    <p>Você modifica os arquivos no seu diretório de trabalho;</p>
+                </li>
+                <li>
+                    <p>Você prepara os arquivos, adicionando imagens deles à sua área de preparo;</p>
+                </li>
+                <li>
+                    <p>Você executa o comando <b>commit</b>, o que leva os arquivos como eles estão na área de preparo
+                        e armazena essa imagens de forma permanente para o diretório do Git.</p>
+                </li>
             </ol>
             <hr>
             <small>Fonte:
                 <ul>
                     <li>
-                        <a href="https://www.atlassian.com/br/git/tutorials/what-is-git" target="_blank" rel="noopener noreferrer">
+                        <a href="https://www.atlassian.com/br/git/tutorials/what-is-git" target="_blank"
+                            rel="noopener noreferrer">
                             O que é Git
                         </a>
                     </li>
                     <li>
-                        <a href="https://git-scm.com/book/pt-br/v2/Come%C3%A7ando-O-B%C3%A1sico-do-Git" target="_blank" rel="noopener noreferrer">
+                        <a href="https://git-scm.com/book/pt-br/v2/Come%C3%A7ando-O-B%C3%A1sico-do-Git" target="_blank"
+                            rel="noopener noreferrer">
                             Começando - O Básico do Git
                         </a>
                     </li>
                     <li>
-                        <a href="https://blog.rocketseat.com.br/iniciando-com-git-github/" target="_blank" rel="noopener noreferrer">
+                        <a href="https://blog.rocketseat.com.br/iniciando-com-git-github/" target="_blank"
+                            rel="noopener noreferrer">
                             Git & Github: O que é? Por que? Como iniciar?
                         </a>
                     </li>
@@ -115,4 +159,5 @@
     </footer>
     <script src="../scripts/script.js"></script>
 </body>
+
 </html>
