--- a/pages/instalacaoWindows.html
+++ b/pages/instalacaoWindows.html
@@ -46,7 +46,7 @@
         <article>
             <h1>Instalação no Windows</h1>
             <p>
-                Nesta página, você aprenderá a fazer a <b>instalação do Git</b> no <b>Windows</b> por etapas e já adiantamos instalar o GIT no Windows é tão simples como baixar um instalador e executá-lo. Execute os seguintes passos
+                Esta página te ensinarar a instalar o <b>git</b> no <b>Windows</b> por etapas, é muito simples, siga as etapas:
                 
             </p>
             <ol>
