git commit -m "Correção de ortografia, sintaxe e organização"

--- a/pages/configuracao.html
+++ b/pages/configuracao.html
@@ -83,11 +83,13 @@
                     <li>Acesse o Git no Windows ou terminal do Linux.</li>
                 </h2>
                 <p>
-                    Se você estiver no linux basta abrir o terminal e digitar esses comandos, porém no windows <br> você deve abrir o menu de pesquisa e digitar Git Bash.
+                    Se você estiver no <b>Linux</b>, basta abrir o <b>Terminal</b> e digitar os seguintes comandos. 
+                    Porém, no <b>Windows</b> você deve abrir o Menu de Pesquisa e digitar "<b>Git Bash</b>" 
+                    ou acessar o <b>Prompt de Comando</b>.
                 </p>
-
                 <p>
-                    Para que seja configurado o nome de usuário de sua conta git basta <br> digitar o código abaixo e colocar seu nome de usuário de sua conta no Git Hub :
+                    Para que seja configurado o <b>nome</b> de usuário de sua conta do Git, 
+                    basta digitar o código abaixo e colocar seu nome de usuário de sua conta no GitHub:
                 </p>
                 <div class="codigo">
                     <code>
@@ -95,7 +97,8 @@
                     </code>
                 </div>
                 <p>
-                    Para que seja configurado seu email para a vinculação com a sua conta git, basta <br> digitar o código abaixo e colocar seu email utilizado em sua conta no Git Hub :
+                    Para que seja configurado seu <b>email</b> para a vinculação com a sua conta do Git, 
+                    basta digitar o código abaixo e colocar seu email utilizado em sua conta no GitHub:
                 </p>
                 <div class="codigo">
                     <code>
@@ -114,7 +117,7 @@
                     </code>
                 </div>
                 <p>
-                    O Git possui um editor de texto incluido na instalação, mas você pode utilizar outros
+                    O Git possui um editor de texto incluído na instalação, mas você pode utilizar outros
                     de sua preferência.
                 </p>
             </ol>
@@ -124,8 +127,8 @@
                     <p>
                     <div class="codigo">
                         <code>
-                                $ git config
-                            </code>
+                            $ git config
+                        </code>
                     </div>
                     é o comando para acessar as configurações do Git;
                     </p>
@@ -134,8 +137,8 @@
                     <p>
                     <div class="codigo">
                         <code>
-                                --global
-                            </code>
+                            --global
+                        </code>
                     </div>
                     é a gravação do seu nome e email;
                     </p>
@@ -144,8 +147,8 @@
                     <p>
                     <div class="codigo">
                         <code>
-                                user.name
-                            </code>
+                            user.name
+                        </code>
                     </div>
                     é o seu nome de úsuario de sua conta no Git Hub;
                     </p>
@@ -154,8 +157,8 @@
                     <p>
                     <div class="codigo">
                         <code>
-                                user.email
-                            </code>
+                            user.email
+                        </code>
                     </div>
                     é o seu email utilizado em sua conta no Git Hub;
                     </p>
@@ -164,8 +167,8 @@
                     <p>
                     <div class="codigo">
                         <code>
-                                --list
-                            </code>
+                            --list
+                        </code>
                     </div>
                     é a lista de configurações.
                     </p>
