--- a/pages/instalacaoLinux.html
+++ b/pages/instalacaoLinux.html
@@ -84,7 +84,7 @@
                     atualizações e de novos arquivos.
                 </p>
             </ol>
-            <h2>Pronto! O Git foi instalado no Linux com Sucesso!</h2>
+            <h2>Pronto! O Git foi instalado no Linux com sucesso!</h2>
             <p>
                 Diferente da instalação do Git no Windows, no Linux é por meio de comandos no terminal.
                 Agora desfrute seus projetos com o Git!
