--- a/pages/instalacaoWindows.html
+++ b/pages/instalacaoWindows.html
@@ -30,7 +30,7 @@
             <a href="instalacao.html"><li>Instalação</li></a>
             <ul class="categoria">
                 <a href="instalacaoLinux.html"><li>Instalação no Linux</li></a>
-                <a href="instalacaoWindows.html"><li>Instalação do git no Windows</li></a>
+                <a href="instalacaoWindows.html"><li>Instalação no Windows</li></a>
             </ul>
             <a href="configuracao.html"><li>Configuração</li></a>
             <a href="comandos.html"><li>Comandos</li></a>
@@ -46,8 +46,7 @@
         <article>
             <h1>Instalação no Windows</h1>
             <p>
-                Nesta página, você aprenderá a fazer a <b>instalação do Git</b> no <b>Windows</b> por etapas e já adiantamos instalar o GIT no Windows é tão simples como baixar um instalador e executá-lo. Execute os seguintes passos
-                
+                Nesta página, você aprenderá a fazer a <b>instalação do Git</b> no <b>Windows</b> por etapas, de forma prática e rápida. Execute os seguintes passos:   
             </p>
             <ol>
                 <h2><li>Acesse o site <a href="https://gitforwindows.org/" target="_blank" rel="noopener noreferrer">Git for Windows.</a></li></h2>
@@ -60,13 +59,17 @@
                 <h2><li>Depois de esperar o processo de instalação, clique em Finish.</li></h2>
                 <img src="../images/InstalacaoWindows/Passo4_Windows.png" alt="Passo 4 da instalacao do Git no Windows">
             </ol>
-            <h2>Pronto! O Git foi instalado no Windows!</h2>
+            <h2>Pronto! O Git foi instalado no Windows com sucesso!</h2>
             <p>
-                Diferente da instalação do Git no Linux, no Windows é por meio de um arquivo executável instalador.
-                
+                Diferente da instalação do Git no Linux, no Windows é por meio de um arquivo executável de instalação.
                 Agora desfrute seus projetos com o Git!
             </p>
-            <p> E vale ressaltar que anteriormente no site gitforwindows.org era necessario escolher qual versão do windows era a sua maquina (32bits/64bits) no momento dá publicação deste site está opção não está sendo mais usada agora já baixa a versão necessaria. </p>
+            <p>
+                E vale ressaltar que, anteriormente o 
+                <a href="https://gitforwindows.org/" target="_blank" rel="noopener noreferrer">Git for Windows</a> 
+                era necessário escolher a versão do Windows (32 bits/64 bits) e no momento da publicação 
+                deste site esta a opção não é necessária, instalando a versão de acordo com o tipo de arquitetura do computador.
+            </p>
         </article>
     </main>
     <footer>
