alteracoes no github

--- a/pages/github.html
+++ b/pages/github.html
@@ -47,10 +47,10 @@
             <h1>GitHub</h1>
             <img class="logotipos-explicacao" src="../images/GitHub/GitHubLogo.png" alt="Logotipo do Git">
             <p>
-                O GitHub é uma plataforma de hospedagem colaborativa de código-fonte com controle de versão usando o Git. 
-                É a maior rede social dedicada para desenvolvedores atualmente, permitindo aos cadastrados na plataforma 
-                contribuam em projetos privados e/ou Open Source de qualquer lugar do mundo e a qualquer momento.
-            </p>
+                O GIT HUB é uma plataforma online de trabalho colaborativo por meio de respositórios, onde os usuários 
+                compartilham seus projetos e onde pessoas de todo mundo podem trabalhar paralelamente neles, pense nela 
+                com uma rede social de desenvolvedores. 
+                </p>
             <p>
                 Desenvolvida por Chris Wanstrath, J. Hyett, Tom Preston-Werner e Scott Chacon, o primeiro
                 <b>commit</b> realizado pela empresa em 2007, em São Francisco.
@@ -62,14 +62,20 @@
                 funções como a criação de branches), além de depender de ferramentas de terceiros para Sistemas de CI/CD.
             </p>
             <p>
-                O GitHub é mundialmente usado e chega a ter mais de 36 milhões de usuários ativos mundialmente 
-                contribuindo em projetos comerciais ou pessoais. Atualmente o GitHub abriga mais de 100 milhões de projetos.
+                Pense no GITHUB, como o local em que as versões feitas no GIT serão armazenadas na internet, para o compartilhamento 
+                e as alterações.
+                Para utilizar deve-se criar uma conta, criando assim seu repositório, lugar onde seu código ficará armazenado.
             </p>
             <h2>A Rede Social dos Desenvolvedores</h2>
             <p>
                 O Git é a fonte primordial do GitHub, onde os comandos através do Git serão enviados para
                 o repositório do programador cadastrado na plataforma. O Hub significa a socialização com 
                 pessoas que possuem os mesmos interesses de projeto que você.
+                <p> Simplificando a explicação pelo nome: </p>
+        <ul>
+            <li>“GIT” – Programa de sistema de controle de versão utilizado</li>
+            <li>“HUB” – A conexão ente programadores do mundo todo para trabalhar no código</li>
+        </ul>
             </p>
             <hr>
             <small>Fonte:
