Algumas alterações de texto comandos, git pull, branches

--- a/pages/branches.html
+++ b/pages/branches.html
@@ -47,11 +47,7 @@
             <h1>Branches</h1>
             <img class="logotipos-explicacao" src="../images/Branch/Figura1_Branch.png" alt="Figura de Branch">
             <p>
-                Uma ramificação no Git é um ponteiro para as alterações feitas nos arquivos do projeto. É útil
-                em situações nas quais você deseja adicionar um novo recurso ou corrigir um erro, gerando
-                uma nova ramificação garantindo que o código instável não seja mesclado nos arquivos do
-                projeto principal. Depois de concluir a atualização dos códigos da ramificação, você pode
-                mesclar a ramificação com a principal, geralmente chamada de master.
+                Branch é uma cópia separada do diretório onde você pode desenvolver de maneira isolada sem afetar o repositório ou mesmo outros Branchs. Após finalizar o trabalho você pode combinar seu Branch com o repositório através do Pull Request.
             </p>
             <h2>Como criar um branch local</h2>
             <p>
@@ -105,12 +101,10 @@
         </article>
     </main>
     <footer>
-        <p>Integrantes:</p>
+        <p>Grupo:</p>
         <ul>
-            <li>Gustavo Matheus</li>
-            <li>Matheus Felipe</li>
-            <li>Felipe Silva</li>
-            <li>Pedro Ribeiro</li>
+            <li>Moisés</li>
+            
         </ul>
     </footer>
     <script src="../scripts/script.js"></script>
