--- a/pages/gitpull.html
+++ b/pages/gitpull.html
@@ -47,10 +47,7 @@
             <h1>Git Pull</h1>
             <img class="logotipos-explicacao" src="../images/GitPull/Figura1_GitPull.png" alt="Figura de Git Pull">
             <p>
-                Para que você envie suas alterações para a origem você precisa antes verificar se o repositório
-                remoto sofreu alterações de outras pessoas desde que você começou a trabalhar naquela
-                branch, e caso haja alterações você precisa trazê-las para o seu código. O comando utilizado
-                para isso é:
+                O Pull Request é uma maneira de informar a todos que você irá executar a implementação do seu código ao Repositório principal. Dessa forma os colaboradores podem abrir e revisar a Pull Request e decidir se aceitam ou não as mudanças. O comando utilizado é:
             </p>
             <div class="codigo">
                 <code>
@@ -83,12 +80,9 @@
         </article>
     </main>
     <footer>
-        <p>Integrantes:</p>
+        <p>Grupo:</p>
         <ul>
-            <li>Gustavo Matheus</li>
-            <li>Matheus Felipe</li>
-            <li>Felipe Silva</li>
-            <li>Pedro Ribeiro</li>
+            <li>Moisés</li>
         </ul>
     </footer>
     <script src="../scripts/script.js"></script>
