--- a/pages/comandos.html
+++ b/pages/comandos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/style.css">
     <link rel="shortcut icon" href="../favicon.ico" type="image/x-icon">
-    <title>Git – Comandos</title>
+    <title>Git – Principais Comandos</title>
 </head>
 <body>
     <div class="focus"></div>
@@ -44,9 +44,9 @@
     </nav>
     <main>
         <article>
-            <h1>Comandos do Git</h1>
+            <h1>Principais Comandos do Git</h1>
             <p>
-                Nesta página, você verá os principais <b>comandos do Git</b>:
+                Nesta página, você verá os <b> principais comandos do Git</b>:
             </p>
             <ul>
                 <li>
@@ -56,7 +56,7 @@
                                 git init
                             </code>
                         </div>
-                        para inicializar um repositório;
+                        Cria um novo repositório;
                     </p>
                 </li>
                 <li>
@@ -66,119 +66,116 @@
                                 git status
                             </code>
                         </div>
-                        para obter status do repositório;
+                        Apresenta o status do repositório;
                     </p>
                 </li>
                 <li>
                     <p>
                         <div class="codigo">
                             <code>
-                                git add .
+                               git add nome _do_arquivo.txt
                             </code>
                         </div>
-                        para adicionar arquivos novos e alterados;
+                         Adiciona um novo arquivo especifico;
                     </p>
                 </li>
                 <li>
                     <p>
                         <div class="codigo">
                             <code>
-                                git commit -m "mensagem de alteração"
+                                git add nome _do_diretorio
                             </code>
                         </div>
-                        para fazer as mudanças no repositório;
+                        Adiciona um novo diretório especifico;
                     </p>
                 </li>
                 <li>
                     <p>
                         <div class="codigo">
                             <code>
-                                git pull origin nome-do-branch
+                                git reset
                             </code>
                         </div>
-                        para ver o histórico do servidor remoto;
+                        Reverte o git add;
                     </p>
                 </li>
                 <li>
                     <p>
                         <div class="codigo">
                             <code>
-                                git push origin nome-do-branch
+                                git commit meu_arquivo.txt
                             </code>
                         </div>
-                        para enviar o histórico ao servidor remoto;
+                        Comitar um arquivo;
                     </p>
                 </li>
                 <li>
                     <p>
                         <div class="codigo">
                             <code>
-                                git branch
+                               git commit meuarquivo.txt -m "minha mensagem de commit"
                             </code>
                         </div>
-                        para listar as branches;
+                        Comitar informando uma mensagem;
                     </p>
                 </li>
                 <li>
                     <p>
                         <div class="codigo">
                             <code>
-                                git checkout nome-do-branch
+                                git rm meu_arquivo.txt 
                             </code>
                         </div>
-                        para alternar de branch;
+                        Remove arquivo;
                     </p>
                 </li>
                 <li>
                     <p>
                         <div class="codigo">
                             <code>
-                                git branch nome-do-branch
+                               git rm – r diretório
                             </code>
                         </div>
-                        para criar um branch;
+                         Remove o diretório;
                     </p>
                 </li>
                 <li>
                     <p>
                         <div class="codigo">
                             <code>
-                                git checkout -b new-issue
+                                git log
                             </code>
                         </div>
-                        para criar e selecionar o branch;
+                       Para visualizar o histórico de commits;
                     </p>
                 </li>
                 <li>
                     <p>
                         <div class="codigo">
                             <code>
-                                git branch -d nome-do-branch
+                               git push 
                             </code>
                         </div>
-                        para deletar um branch local;
+                        Envia as mudanças para o servidor;
                     </p>
                 </li>
                 <li>
                     <p>
                         <div class="codigo">
                             <code>
-                                git push origin :nome-do-branch
+                                git pull 
                             </code>
                         </div>
-                        para deletar um branch remoto;
+                        Captura as mudanças que estão salvas no servidor;
                     </p>
                 </li>
             </ul>
         </article>
     </main>
     <footer>
-        <p>Integrantes:</p>
+        <p>Grupo:</p>
         <ul>
-            <li>Gustavo Matheus</li>
-            <li>Matheus Felipe</li>
-            <li>Felipe Silva</li>
-            <li>Pedro Ribeiro</li>
+            <li>Moisés</li>
         </ul>
     </footer>
     <script src="../scripts/script.js"></script>
