git commit -m "Alterações na sintaxe HTML, ortografia, responsividade e mesclagem de textos"

--- a/index.html
+++ b/index.html
@@ -141,13 +141,14 @@
         </article>
     </main>
     <footer>
-        <p>Integrantes:</p>
-        <ul>
-            <li>Gustavo Matheus</li>
-            <li>Matheus Felipe</li>
-            <li>Felipe Silva</li>
-            <li>Pedro Ribeiro</li>
-        </ul>
+        <p>Grupos:</p>
+    <ul>
+        <li>Esaú e os 300</li>
+        <li>Los Fofurinhas</li>
+        <li>Los Moringas</li>
+        <li>Grupo Moisés</li>
+        <li>Thundercats</li>
+    </ul>
     </footer>
     <script src="scripts/script.js"></script>
 </body>
