--- a/pages/branches.html
+++ b/pages/branches.html
@@ -47,9 +47,11 @@
             <h1>Branches</h1>
             <img class="logotipos-explicacao" src="../images/Branch/Figura1_Branch.png" alt="Figura de Branch">
             <p>
-                Branch é uma cópia separada do diretório onde você pode desenvolver de maneira isolada sem afetar o repositório ou mesmo outros Branchs. Após finalizar o trabalho você pode combinar seu Branch com o repositório através do Pull Request.
+                Branch é uma cópia separada do diretório onde você pode desenvolver de maneira isolada sem afetar 
+                o repositório ou mesmo outras Branches. Após finalizar o trabalho você pode combinar seu Branch 
+                com o repositório através do Pull Request.
             </p>
-            <h2>Como criar um branch local</h2>
+            <h2>Como criar um Branch local</h2>
             <p>
                 Estando na pasta do projeto (master), podemos criar um novo branch local usando o
                 comando:
@@ -101,10 +103,13 @@
         </article>
     </main>
     <footer>
-        <p>Grupo:</p>
+        <p>Grupos:</p>
         <ul>
-            <li>Moisés</li>
-            
+            <li>Esaú e os 300</li>
+            <li>Los Fofurinhas</li>
+            <li>Los Moringas</li>
+            <li>Grupo Moisés</li>
+            <li>Thundercats</li>
         </ul>
     </footer>
     <script src="../scripts/script.js"></script>
