--- a/pages/comandos.html
+++ b/pages/comandos.html
@@ -173,9 +173,13 @@
         </article>
     </main>
     <footer>
-        <p>Grupo:</p>
+        <p>Grupos:</p>
         <ul>
-            <li>Moisés</li>
+            <li>Esaú e os 300</li>
+            <li>Los Fofurinhas</li>
+            <li>Los Moringas</li>
+            <li>Grupo Moisés</li>
+            <li>Thundercats</li>
         </ul>
     </footer>
     <script src="../scripts/script.js"></script>
