--- a/pages/errosdecommit.html
+++ b/pages/errosdecommit.html
@@ -47,12 +47,11 @@
             <h1>Erros de Commit</h1>
             <p>
                 Digamos que você acabou de fazer um commit e errou na mensagem do log de confirmação.
-                 Executar este comando quando não existe nada na área de staging permite que você
-                 edite a mensagem do commit anterior sem alterar o snapshot.
+                Executar este comando quando não existe nada na área de staging permite que você
+                edite a mensagem do commit anterior sem alterar o snapshot.
                 Commits prematuros acontecem o tempo todo durante o desenvolvimento diário. 
                 É fácil esquecer de preparar um arquivo ou formatar a mensagem de commit da 
                 forma errada. 
-                
             </p>
             <p><b>Aqui estão os métodos para fazer a correção desses erros:</b></p>
             <ol>
@@ -179,7 +178,7 @@
                 </div>
                 <p>
                     Salve e feche o arquivo. Depois disso o git vai abrir cada um dos commits
-                     marcados com <b>"reword"</b> para edição. Edite as mensagens, salve e feche.
+                    marcados com <b>"reword"</b> para edição. Edite as mensagens, salve e feche.
                 </p>
                 <h2><li>Alterar os commits (DEPOIS DO PUSH):</li></h2>
                 <p>
@@ -195,12 +194,13 @@
                     </code>
                 </div>
             </ol>
-            <p class="alerta-commit">O recomendável é evitar tanto quanto possível o push forçado, 
-            uma vez que isso altera o histórico do repositório.
-            No caso de push forçado, as pessoas que já clonaram o repositório terão que corrigir 
-            manualmente o respectivo histórico local.</p>
+            <p class="alerta-commit">
+                O recomendável é evitar tanto quanto possível o push forçado, 
+                uma vez que isso altera o histórico do repositório.
+                No caso de push forçado, as pessoas que já clonaram o repositório terão que corrigir 
+                manualmente o respectivo histórico local.
+            </p>
             <hr>
-
             <small>Fonte:
                 <ul>
                     <li>
@@ -218,13 +218,14 @@
         </article>
     </main>
     <footer>
-        <p>Integrantes:</p>
-        <ul>
-            <li>Gustavo Matheus</li>
-            <li>Matheus Felipe</li>
-            <li>Felipe Silva</li>
-            <li>Pedro Ribeiro</li>
-        </ul>
+        <p>Grupos:</p>
+    <ul>
+        <li>Esaú e os 300</li>
+        <li>Los Fofurinhas</li>
+        <li>Los Moringas</li>
+        <li>Grupo Moisés</li>
+        <li>Thundercats</li>
+    </ul>
     </footer>
     <script src="../scripts/script.js"></script>
 </body>
