--- a/pages/github.html
+++ b/pages/github.html
@@ -47,7 +47,7 @@
             <h1>GitHub</h1>
             <img class="logotipos-explicacao" src="../images/GitHub/GitHubLogo.png" alt="Logotipo do Git">
             <p>
-                O GIT HUB é uma plataforma online de trabalho colaborativo por meio de respositórios, onde os usuários 
+                O GitHub é uma plataforma online de trabalho colaborativo por meio de respositórios, onde os usuários 
                 compartilham seus projetos e onde pessoas de todo mundo podem trabalhar paralelamente neles, pense nela 
                 com uma rede social de desenvolvedores. 
                 </p>
@@ -64,6 +64,8 @@
             <p>
                 Pense no GITHUB, como o local em que as versões feitas no GIT serão armazenadas na internet, para o compartilhamento 
                 e as alterações.
+            </p>
+            <p>
                 Para utilizar deve-se criar uma conta, criando assim seu repositório, lugar onde seu código ficará armazenado.
             </p>
             <h2>A Rede Social dos Desenvolvedores</h2>
@@ -71,12 +73,14 @@
                 O Git é a fonte primordial do GitHub, onde os comandos através do Git serão enviados para
                 o repositório do programador cadastrado na plataforma. O Hub significa a socialização com 
                 pessoas que possuem os mesmos interesses de projeto que você.
-                <p> Simplificando a explicação pelo nome: </p>
-        <ul>
-            <li>“GIT” – Programa de sistema de controle de versão utilizado</li>
-            <li>“HUB” – A conexão ente programadores do mundo todo para trabalhar no código</li>
-        </ul>
             </p>
+            <p>
+                Simplificando a explicação pelo nome: 
+            </p>
+            <ul>
+                <li>“GIT” – Programa de sistema de controle de versão utilizado</li>
+                <li>“HUB” – A conexão ente programadores do mundo todo para trabalhar no código</li>
+            </ul>
             <hr>
             <small>Fonte:
                 <ul>
@@ -100,13 +104,14 @@
         </article>
     </main>
     <footer>
-        <p>Integrantes:</p>
-        <ul>
-            <li>Gustavo Matheus</li>
-            <li>Matheus Felipe</li>
-            <li>Felipe Silva</li>
-            <li>Pedro Ribeiro</li>
-        </ul>
+        <p>Grupos:</p>
+    <ul>
+        <li>Esaú e os 300</li>
+        <li>Los Fofurinhas</li>
+        <li>Los Moringas</li>
+        <li>Grupo Moisés</li>
+        <li>Thundercats</li>
+    </ul>
     </footer>
     <script src="../scripts/script.js"></script>
 </body>
