--- a/pages/gitlab.html
+++ b/pages/gitlab.html
@@ -8,20 +8,109 @@
     <title>Git – Sobre GitLab</title>
 </head>
 <body>
-    <article>
-        <h1>GIT LAB </h1>
-        <p>O GIT LAB tambem é uma plataforma online de trabalho baseada em repositórios, 
-            mas diferentemente do GIT HUB, ele é Open Source, criado em 2011, pela empresa GitLab B.V</p>
-        <p>O que torna ele de grande utilização, é a chance de você poder baixa-lo e instalá-lo no seu 
-            próprio servidor, para facilitar sua atividade no dia a dia, tendo assim uma interface web
-             para gerir seus códigos, se o usuário tem a intenção de trabalhar em seu código, só com 
-             desenvolvedores da sua própria equipe, o GIT LAB, pode ajudar a acelerar um pouco o seu fluxo
-              de trabalho.</p>
-        <p>E ele tambem tem a hospedagem publica, basta você criar sua conta e armazenar seus códigos num 
-            repositório online. </p>
-    </article>
-    <aside>
-        <img src="../images/GitLab/GitLabLogo2.png"width=425px height=250px>
-    </aside>
+    <div class="focus"></div>
+    <header>
+        <div class="menu-icon">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
+        <img src="../images/Logo/Git Logo.png" alt="Logotipo do Git">
+        <p>Git</p>
+    </header>
+    <nav class="vertical-nav">
+        <ul class="lista">
+            <a href="../index.html"><li>Controle de Versão</li></a>
+            <a href="git.html"><li>Git</li></a>
+            <a href="github.html"><li>GitHub</li></a>
+            <ul class="categoria">
+                <a href="contaGitHub.html"><li>Criar Conta no GitHub</li></a>
+            </ul>
+            <a href="gitlab.html"><li>GitLab</li></a>
+            <a href="instalacao.html"><li>Instalação</li></a>
+            <ul class="categoria">
+                <a href="instalacaoLinux.html"><li>Instalação no Linux</li></a>
+                <a href="instalacaoWindows.html"><li>Instalação no Windows</li></a>
+            </ul>
+            <a href="configuracao.html"><li>Configuração</li></a>
+            <a href="comandos.html"><li>Comandos</li></a>
+            <ul class="categoria">
+                <a href="gitpull.html"><li>Git Pull</li></a>
+                <a href="branches.html"><li>Branches</li></a>
+            </ul>
+            <a href="errosdecommit.html"><li>Erros no Commit</li></a>
+            <a href="exemplo.html"><li class="final">Exemplo de Utilização com Git</li></a>
+        </ul>
+    </nav>
+    <main>
+        <article>
+            <h1>GitLab</h1>
+            <img class="logotipos-explicacao" src="../images/GitLab/GitLabLogo.png" alt="Logotipo do Git">
+            <p>
+                O GitLab é um gerenciador de repositório de software baseado em git, com suporte a Wiki, 
+                integração contínua e gerenciamento de tarefas. Similar ao GitHub, porém o GitLab é open-source, 
+                permitindo que os desenvolvedores armazenem e alterem o código em seus próprios servidores, ao invés de 
+                servidores de terceiros.
+            </p>
+            <p>
+                O que torna ele de grande utilização, é a chance de você poder baixá-lo e instalá-lo no seu 
+                próprio servidor, para facilitar sua atividade no dia a dia, tendo assim uma interface web
+                para gerir seus códigos, se o usuário tem a intenção de trabalhar em seu código, só com 
+                desenvolvedores da sua própria equipe, o GitLab, pode ajudar a acelerar um pouco o seu fluxo
+                de trabalho.
+            </p>
+            <p>
+                O Gitlab proporciona, nativamente, ferramentas de integração e entrega contínua (CI/CD), 
+                além de métricas para acompanhamento de qualidade de código, performance e teste de usabilidade.
+                Contudo, seu diferencial destaca-se em criar branches privadas caso o desenvolvedor
+                prefira não expor o código-fonte do projeto.
+            </p>
+            <p>
+                E ele também tem a hospedagem pública, basta você criar sua conta e armazenar seus códigos num 
+                repositório online. 
+            </p>
+            <p>
+                O software foi escrito originalmente por Dmitriy Zaporozhets, com sua primeira versão em 2011 e 
+                e com a ajuda de Sytse Sijbrandij resolveram fundar uma empresa para dar suporte ao projeto, 
+                em 2013. 
+            </p>
+            <p>
+                É utilizado por mais de 100.000 organizações, incluindo IPqM (Marinha do Brasil), 
+                IBM, Serpro (Serviço Federal de Processamento de Dados), NASA, Alibaba, 
+                Invincea, O’Reilly Media, CERN, Projeto GNOME e SpaceX.
+            </p>
+            <hr>
+            <small>Fonte:
+                <ul>
+                    <li>
+                        <a href="https://git-scm.com/book/pt-pt/v2/Git-no-Servidor-GitLab" target="_blank" rel="noopener noreferrer">
+                            Git no Servidor - GitLab
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://www.zup.com.br/blog/git-github-e-gitlab" target="_blank" rel="noopener noreferrer">
+                            Git, Github e Gitlab: o que são e principais diferenças
+                        </a>
+                    </li>
+                    <li>
+                        <a href="https://pt.wikipedia.org/wiki/GitLab" target="_blank" rel="noopener noreferrer">
+                            GitLab
+                        </a>
+                    </li>
+                </ul>
+            </small>
+        </article>
+    </main>
+    <footer>
+        <p>Grupos:</p>
+        <ul>
+            <li>Esaú e os 300</li>
+            <li>Los Fofurinhas</li>
+            <li>Los Moringas</li>
+            <li>Grupo Moisés</li>
+            <li>Thundercats</li>
+        </ul>
+    </footer>
+    <script src="../scripts/script.js"></script>
 </body>
 </html>
