--- a/pages/gitpull.html
+++ b/pages/gitpull.html
@@ -47,7 +47,9 @@
             <h1>Git Pull</h1>
             <img class="logotipos-explicacao" src="../images/GitPull/Figura1_GitPull.png" alt="Figura de Git Pull">
             <p>
-                O Pull Request é uma maneira de informar a todos que você irá executar a implementação do seu código ao Repositório principal. Dessa forma os colaboradores podem abrir e revisar a Pull Request e decidir se aceitam ou não as mudanças. O comando utilizado é:
+                O Pull Request é uma maneira de informar a todos que você irá executar a implementação do seu 
+                código ao Repositório principal. Dessa forma os colaboradores podem abrir e revisar a 
+                Pull Request e decidir se aceitam ou não as mudanças. O comando utilizado é:
             </p>
             <div class="codigo">
                 <code>
