--- a/pages/instalacaoLinux.html
+++ b/pages/instalacaoLinux.html
@@ -44,7 +44,7 @@
     </nav>
     <main>
         <article>
-            <h1>Instalação do GIT no Linux</h1>
+            <h1>Instalação do Git no Linux</h1>
             <p>
                 Nesta página, você aprenderá a fazer a <b>instalação do Git</b> no <b>Linux</b> por etapas:
             </p>
@@ -92,13 +92,14 @@
         </article>
     </main>
     <footer>
-        <p>Integrantes:</p>
-        <ul>
-            <li>Gustavo Matheus</li>
-            <li>Matheus Felipe</li>
-            <li>Felipe Silva</li>
-            <li>Pedro Ribeiro</li>
-        </ul>
+        <p>Grupos:</p>
+    <ul>
+        <li>Esaú e os 300</li>
+        <li>Los Fofurinhas</li>
+        <li>Los Moringas</li>
+        <li>Grupo Moisés</li>
+        <li>Thundercats</li>
+    </ul>
     </footer>
     <script src="../scripts/script.js"></script>
 </body>
