Correção de Ortografia

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     área de trabalho (Workstation) e posteriormente atualizar a versão contida no servidor.
                 </p>
                 <p>
-                    Os comandos utilizados para efeturem a sincronização de arquivos do projeto entre a área de trabalho
+                    Os comandos utilizados para efetuarem a sincronização de arquivos do projeto entre a área de trabalho
                     e o servidor são: <b>commit</b> e <b>update</b>.
                 </p>
                 <p>
